tests/paczka1/fuzzy1/96348078.err
Error in line 2: m2kfXshpdHG S949 99,4
Error in line 7: ZJ4QcXi A361 76,6
Error in line 19: j6dq6d S906 97,7
Error in line 31: l9bz3Vldh A361 77,3
